<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="324dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/bejaia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/beaches_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/beaches" />

    <Button
        android:id="@+id/restaurants_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurants"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <Button
        android:id="@+id/mountain_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mountains"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        />

    <Button
        android:id="@+id/credits_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/credits" />

</LinearLayout>
